# fineweb-legal

./: .env.example  .gitignore  README.md  pyproject.toml
ablation_results/: master_summary.json
ablation_results/lora_r16/: config.json  confusion_matrix.npy  results.json
ablation_results/lora_r32/: classification_report.txt  config.json  confusion_matrix.npy  results.json
ablation_results/lora_r8/: classification_report.txt  config.json  confusion_matrix.npy  results.json
ablation_results/lr_1e-3/: classification_report.txt  config.json  confusion_matrix.npy  results.json
ablation_results/lr_1e-4/: classification_report.txt  config.json  confusion_matrix.npy  results.json
ablation_results/lr_2e-4/: config.json  results.json
ablation_results/lr_5e-4/: classification_report.txt  config.json  confusion_matrix.npy  results.json
ablation_results/no_weights/: classification_report.txt  config.json  confusion_matrix.npy  results.json
ablation_results/seq_1024/: config.json  results.json
ablation_results/seq_2048/: classification_report.txt  config.json  confusion_matrix.npy  results.json
ablation_results/seq_512/: classification_report.txt  config.json  results.json  (+1 more)
docs/: DATASET_CARD.md  DATASET_CARD_ANNOTATIONS.md  MODEL_CARD.md  TECHNICAL_REPORT.md  TRAINING_LOG.md
logs/: dataset_analysis.json
scripts/: ablation_study.py  analyze_dataset_deep.py  consolidate_and_clean.py  create_dataset_splits.py  model_inference_stage2.py  model_inference_stage2_cuda.py  publish_annotations.py  publish_to_hf.py  stream_filter_stage1.py  test_inference_mac.py
(+107 files in other folders)
